style(eventCard): fix Safari overflow (#214)

--- a/src/components/eventCard/index.module.css
+++ b/src/components/eventCard/index.module.css
@@ -15,5 +15,7 @@
 }
 
 .eventCardDescContainer {
-  box-shadow: 0 -1px 5px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  @media (min-width: 768px) {
+    box-shadow: 0 -1px 5px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  }
 }
